# claude-code-gui

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  manifest  rust-toolchain.toml
.beads/: metadata.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md  SPEC.md
docs/decisions/: 0001-ui-radix-vue.md  0002-server-state-tanstack-query.md  0003-pinia-ui-state.md  0004-router-unplugin-vue-router.md  0005-package-manager-bun.md  0006-ts-rs-export.md  0007-terminal-renderer-xterm.md  0008-rust-toolchain.md  0009-logging-tracing.md  0010-tests.md  0011-code-signing-procurement.md  0012-hooks-metrics-deferred.md  0013-markdown-editor-codemirror.md  0014-form-validation.md  0015-toast-vue-sonner.md  0016-license-mit.md  README.md
frontend/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/scripts/: build-ipc-barrel.ts
frontend/src/: App.vue  main.ts  styles.css  typed-router.d.ts
frontend/src/components/: AppShell.vue  ChatTerminal.vue  ConfirmDialog.vue  ContextPanel.vue  EmptyState.vue  MarkdownEditor.vue  OnboardingFlow.vue  PageHeader.vue  QueryStateBoundary.vue  RelationshipGraph.vue  Sidebar.vue
frontend/src/components/forms/: AgentForm.vue  CommandForm.vue  FormField.vue  McpForm.vue  OutputStyleForm.vue  PlanForm.vue  SkillForm.vue
frontend/src/composables/: useAgents.ts  useAsyncRequest.ts  useCommands.ts  useDraftRecovery.ts  useHooks.ts  useMarketplace.ts  useMcp.ts  useOutputStyles.ts  usePlans.ts  usePlugins.ts  useProjectWatcher.ts  useProjects.ts  useRelationships.ts  useSessions.ts  useSettings.ts  useSkills.ts  useUnsavedChanges.ts
frontend/src/lib/: deepLink.ts  fsListener.ts  queryClient.ts  queryKeys.ts  schemas.ts  terminal.ts
frontend/src/pages/: index.vue  settings.vue
frontend/src/pages/agents/: [slug].vue  index.vue  new.vue
frontend/src/pages/commands/: [slug].vue  index.vue  new.vue
frontend/src/pages/hooks/: index.vue
frontend/src/pages/mcp/: [name].vue  index.vue  new.vue
frontend/src/pages/output-styles/: index.vue
frontend/src/pages/plans/: [slug].vue  index.vue  new.vue
frontend/src/pages/plugins/: [id].vue  index.vue
frontend/src/pages/sessions/: index.vue
frontend/src/pages/sessions/project/: [projectName].vue
frontend/src/pages/sessions/project/[projectName]/: index.vue  settings.vue
frontend/src/pages/sessions/project/[projectName]/session/: [sessionId].vue
frontend/src/pages/skills/: [slug].vue  index.vue  new.vue
frontend/src/types/: ui.ts
frontend/src/types/ipc/: Agent.ts  AgentFrontmatter.ts  AgentImport.ts  AgentInput.ts  AgentMemory.ts  AgentModel.ts  AppConfig.ts  AppError.ts  AvailablePlugin.ts  Command.ts  CommandFrontmatter.ts  CommandInput.ts  DirEntry.ts  ErrorCode.ts  FileNode.ts  GitFileStatus.ts  GitStatus.ts  HookEntry.ts  HookGroup.ts  ImproveRequest.ts  MarketplaceSource.ts  MarketplaceSourceInput.ts  McpCapabilities.ts  McpImportPayload.ts  McpPrompt.ts  McpResource.ts  McpScope.ts  McpServer.ts  McpServerInput.ts  McpTool.ts  McpTransport.ts  Message.ts  MessageKind.ts  ModelMeta.ts  OutputStyle.ts  OutputStyleFrontmatter.ts  OutputStyleInput.ts  OutputStyleScope.ts  Page.ts  PermissionMode.ts  (+22 more)
frontend/src/utils/: description.ts  ipc.ts  models.ts
scripts/: bump-version.ts  generate-updater-manifest.ts  notarize.sh
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/claude_cli/: Cargo.toml
src-tauri/crates/claude_cli/src/: lib.rs
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: agents.rs  claude_cli.rs  claude_dir.rs  commands.rs  files.rs  frontmatter.rs  git.rs  hooks.rs  io.rs  lib.rs  marketplace.rs  mcp.rs  mcp_probe.rs  models.rs  output_styles.rs  plans.rs  plugins.rs  projects.rs  relationships.rs  sessions.rs  settings.rs  setup.rs  skills.rs
src-tauri/crates/core/src/types/: agents.rs  commands.rs  error.rs  hooks.rs  ids.rs  mcp.rs  mod.rs  output_styles.rs  plans.rs  plugins.rs  projects.rs  sessions.rs  settings.rs  skills.rs  terminal.rs
src-tauri/crates/core/tests/: export_types.rs
src-tauri/crates/pty/: Cargo.toml
src-tauri/crates/pty/src/: compose.rs  lib.rs  monitor.rs
src-tauri/crates/watcher/: Cargo.toml
src-tauri/crates/watcher/src/: lib.rs
src-tauri/frontend/src/types/ipc/: ClaudeCliInfo.ts  ModelPricing.ts  SessionId.ts
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: error.rs  events.rs  main.rs  state.rs
src-tauri/src/commands/: agents.rs  cmds.rs  debug.rs  files.rs  hooks.rs  marketplace.rs  mcp.rs  mod.rs  output_styles.rs  plans.rs  plugins.rs  projects.rs  relationships.rs  sessions.rs  settings.rs  skills.rs  terminal.rs
src-tauri/tests/: export_types.rs
