[workspace]
resolver = "2"
members = [
  "src-tauri",
  "src-tauri/crates/core",
  "src-tauri/crates/pty",
  "src-tauri/crates/watcher",
  "src-tauri/crates/claude_cli",
]
default-members = ["src-tauri"]

[workspace.package]
version    = "0.1.0"
edition    = "2021"
rust-version = "1.88"
license    = "MIT"
repository = "https://github.com/cuonghx-dev/claude-code-gui"
authors    = ["cuonghx <cuonghx@gu-tech.com>"]

[workspace.dependencies]
# Serialization / types
serde         = { version = "1",   features = ["derive"] }
serde_json    = "1"
serde_yaml    = "0.9"
ts-rs         = { version = "9",   features = ["serde-compat", "uuid-impl", "chrono-impl", "serde-json-impl"] }

# Errors / logging
thiserror     = "1"
anyhow        = "1"
tracing       = "0.1"
tracing-appender   = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Filesystem / paths
walkdir       = "2"
glob          = "0.3"
globset       = "0.4"
ignore        = "0.4"

# Crypto / IDs / time
sha2          = "0.10"
uuid          = { version = "1",   features = ["v4", "serde"] }
chrono        = { version = "0.4", features = ["serde"] }

# Networking / git
reqwest       = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
git2          = { version = "0.19", features = ["vendored-libgit2"], default-features = false }

# Async runtime
tokio         = { version = "1",   features = ["fs", "process", "sync", "macros", "rt-multi-thread", "io-util", "signal", "time"] }

# MCP
rmcp          = "0.1"

# Regex / lazy
regex         = "1"
once_cell     = "1"

# PTY
portable-pty       = "0.8"
strip-ansi-escapes = "0.2"

# Watcher
notify                = "6"
notify-debouncer-mini = "0.4"

# Tauri
tauri                          = { version = "2" }
tauri-build                    = { version = "2", features = [] }
tauri-plugin-dialog            = "2"
tauri-plugin-shell             = "2"
tauri-plugin-fs                = "2"
tauri-plugin-os                = "2"
tauri-plugin-process           = "2"
tauri-plugin-store             = "2"
tauri-plugin-opener            = "2"
tauri-plugin-updater           = "2"
tauri-plugin-single-instance   = "2"
tauri-plugin-deep-link         = "2"

# Test utilities
tempfile      = "3"
insta         = { version = "1", features = ["yaml", "json"] }

[profile.release]
opt-level    = "s"
lto          = "thin"
codegen-units = 1
strip        = "symbols"
panic        = "abort"

[profile.dev]
opt-level = 0
debug     = 1
