[package]
name        = "claude-code-gui"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "Visual manager for Claude Code agents, commands, skills, plugins, MCP servers, and sessions."

[[bin]]
name = "claude-code-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
app_core   = { path = "crates/core",       package = "claude-code-gui-core" }
pty        = { path = "crates/pty",        package = "claude-code-gui-pty" }
watcher    = { path = "crates/watcher",    package = "claude-code-gui-watcher" }
claude_cli = { path = "crates/claude_cli", package = "claude-code-gui-claude-cli" }

serde         = { workspace = true }
serde_json    = { workspace = true }
ts-rs         = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
tracing-appender   = { workspace = true }
tracing-subscriber = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
tokio         = { workspace = true }

tauri                          = { workspace = true }
tauri-plugin-dialog            = { workspace = true }
tauri-plugin-shell             = { workspace = true }
tauri-plugin-fs                = { workspace = true }
tauri-plugin-os                = { workspace = true }
tauri-plugin-process           = { workspace = true }
tauri-plugin-store             = { workspace = true }
tauri-plugin-opener            = { workspace = true }
tauri-plugin-updater           = { workspace = true }
tauri-plugin-single-instance   = { workspace = true }
tauri-plugin-deep-link         = { workspace = true }
