[package]
name        = "claude-code-gui-claude-cli"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }

[lib]
name = "claude_cli"
path = "src/lib.rs"

[dependencies]
app_core = { path = "../core", package = "claude-code-gui-core" }

serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
uuid          = { workspace = true }
tokio         = { workspace = true }
