[package]
name        = "claude-code-gui-core"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }

[lib]
name = "app_core"
path = "src/lib.rs"

[dependencies]
serde         = { workspace = true }
serde_json    = { workspace = true }
serde_yaml    = { workspace = true }
ts-rs         = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
walkdir       = { workspace = true }
glob          = { workspace = true }
sha2          = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
tokio         = { workspace = true }
reqwest       = { workspace = true }
git2          = { workspace = true }
regex         = { workspace = true }
once_cell     = { workspace = true }

tempfile      = { workspace = true }

[dev-dependencies]
insta    = { workspace = true }
