[package]
name        = "claude-code-gui-watcher"
version     = { workspace = true }
edition     = { workspace = true }
rust-version = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }

[lib]
name = "watcher"
path = "src/lib.rs"

[dependencies]
app_core = { path = "../core", package = "claude-code-gui-core" }

serde         = { workspace = true }
serde_json    = { workspace = true }
ts-rs         = { workspace = true }
tracing       = { workspace = true }
uuid          = { workspace = true }
tokio         = { workspace = true }
ignore        = { workspace = true }
globset       = { workspace = true }
notify                = { workspace = true }
notify-debouncer-mini = { workspace = true }
